fix: ignore the sass-cache dir

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-.sass-cache
+.sass-cache/
 
 # Distribution directories
 dist/
